Implementing map UI for donor

--- a/Blood Bank System/Blood Bank System/Info.plist
+++ b/Blood Bank System/Blood Bank System/Info.plist
@@ -21,5 +21,7 @@
 			</array>
 		</dict>
 	</dict>
+	<key>Privacy - Location When in Use Usage Description</key>
+	<string>Please Give Us Your Locatiom :)</string>
 </dict>
 </plist>
