modifications to UI

--- a/Blood Bank System/Blood Bank System/Info.plist
+++ b/Blood Bank System/Blood Bank System/Info.plist
@@ -22,6 +22,6 @@
 		</dict>
 	</dict>
 	<key>Privacy - Location When in Use Usage Description</key>
-	<string>Please Give Us Your Locatiom :)</string>
+	<string>Please allow access to Location  :)</string>
 </dict>
 </plist>
